Fixed nav on desktop, sticky nav on mobile

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -10,6 +10,10 @@ img {
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
   border-bottom: 1px solid var(--yellow);
+  position: fixed !important;
+  top: 0px;
+  width: 100vw;
+  z-index: 2;
 }
 
 .navbar-brand,
@@ -49,6 +53,13 @@ img {
     width: 320px;
     margin: auto;
   }
+
+  /* Doesn't work */
+  .navbar {
+    position: -webkit-sticky; /* Safari */
+    position: sticky !important;
+    top: 0;
+  }
 }
 
 @media (max-width: 1205px) and (min-width: 993px) {
@@ -60,7 +71,8 @@ img {
 /* HomeJumbo */
 .jumbotron.jumbotron-fluid {
   padding: 0;
-  padding-top: 20px;
+  /* padding-top: 20px; */
+  padding-top: 170px;
   background-image: linear-gradient(90deg, var(--darkblue), var(--darkred));
   display: grid;
   grid-gap: 20px;
